# folklore

./: .editorconfig  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  eslint.config.mjs  package-lock.json  package.json  server.json  skills-lock.json  smithery.yaml  tsconfig.eslint.json  wrangler.toml
.claude/: README.md  settings.json
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.planning/: BENCH-COMPETITORS.md  BENCH-v2.md  CFD-SOTA-ATTACKS.md  DATA-ENGINEER-SOTA-ATTACKS.md  DATA-SCIENCE-SOTA-ATTACKS.md  HANDOFF.md  MATH-SOTA-ATTACKS.md  MILESTONES.md  PARTICLE-PHYSICS-SOTA-ATTACKS.md  PHYSICS-SOTA-ATTACKS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SOTA-UPGRADE-PLAN.md  STATE.md  V2.1-SYNTHESIS.md  harness-integration-roadmap.md  long-term-memory-integration.md  multi-provider-epic.md  p2p-scale-plan.md  v2.1-CANDIDATES.md
akashik-rs/: Cargo.toml
bench/: EXPERIMENT-beat-agentmemory.md  README.md  REAL-MEMORY-BENCHMARKS.md  SESSION-MEMORY.md  bench-arguana-dense.mjs  bench-beir-rust.mjs  bench-beir-sota.mjs  bench-beir.mjs  bench-bridge.mjs  bench-coldstart-seed.mjs  bench-compare.mjs  bench-compounding-graded.mjs  bench-compounding-real.mjs  bench-compounding.mjs  bench-consolidation.mjs  bench-deny-real.mjs  bench-deny-sweep.mjs  bench-deny-validate.mjs  bench-e2e.mjs  bench-embed-throughput.mjs  bench-energy-bge.mjs  bench-energy-coverage.mjs  bench-energy-gate.mjs  bench-index-health.mjs  bench-inference-tree-sharing.mjs  bench-lab.mjs  bench-matryoshka.mjs  bench-memory-tools.mjs  bench-memtool-federation-scifact.py  bench-memtool-federation.py  bench-memtool-latency.py  bench-memtool-poison-scifact.py  bench-memtool-poison.py  bench-memtool-report.py  bench-memtool-webgating.py  bench-memtool.sh  bench-ood-signals.mjs  bench-paraphrase-sigma.mjs  bench-ppr-multihop.mjs  bench-ppr.mjs  (+18 more)
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/resources/: .gitignore
client/desktop/src-tauri/resources/node/: README.md
client/desktop/src-tauri/src/: lib.rs  main.rs
config/: config.example.yaml
demo/: MANUSCRIPT.md  README.md  scene-claude.tape  scene-codebase.tape  scene-federated.sh  scene-federated.tape  scene-prompt-hook.tape  scene-touch.sh  scene-touch.tape  screencast.tape  setup-p2p.sh  setup.sh  teardown-p2p.sh  timing.tape  validate-reputation.sh
docs/: ARCHITECTURE.md  BENCHMARKS-RESULTS.md  LAUNCH-RUNBOOK.md  MANIFESTO.md  MEMORY-TOOL-BENCH-RESULTS.md  MEMORY-TOOL-BENCH-SCOPE.md  MIGRATION-2026-06-24.md  NEXT-LEVERS.md  NEXT_STEPS.md  PROJECT-PLAN-AKASHIK.md  PROJECT-PLAN-FOLKLORE.md  PROTOCOL-QUALITY-QUESTIONS.md  README.md  REPO-SPLIT.md  SECURITY-AUDIT.md  WHITEPAPER.md  demo.tape  index.html  peer-reputation-design.md  positioning-draft.md  probe.html  whitepaper.html
examples/: README.md
folklore-rs/: .gitignore  Cargo.toml
folklore-rs/src/: lib.rs  main.rs
folklore-rs/src/application/: mod.rs
folklore-rs/src/domain/: encoder_spec.rs
functions/: _middleware.js
research/: 00-research-agenda.md  01-notebook-discovery.md  90-synthesis.md  91-next-experiments.md  92-sleep-and-self-improvement.md  README.md
scripts/: bench-arguana-dense.mjs  bench-beir-rust.mjs  bench-beir-sota.mjs  (+24 more)
wellinformed-rs/: Cargo.toml
wellinformed-rs/src/: lib.rs  main.rs
wellinformed-rs/src/domain/: beir.rs  encoder_spec.rs  metrics.rs  mod.rs  vector_ops.rs
wellinformed-rs/src/infrastructure/: encoder_port.rs  mod.rs  progress.rs
(+804 files in other folders)
