[package]
name = "folklore-desktop"
version = "0.1.0"
description = "Folklore desktop — cross-platform tray + onboard wizard"
authors = ["Folklore"]
edition = "2021"

[lib]
name = "folklore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
